fix(DejaGrid): Incorrect elected and hover row backcolor when the horizontal scroll was not at 0

--- a/src/component/data-grid/_data-grid-theme.scss
+++ b/src/component/data-grid/_data-grid-theme.scss
@@ -13,20 +13,6 @@
 							box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.3);
 						}
 					}
-					&.selected {
-						background-color: transparent;
-						deja-grid-row {
-							background-color: rgba(mat-color($primary), 0.75);
-						}
-					}
-				}
-				&[keynav="false"]:not(.dragover) {
-					div.listitem:not(.unselectable):hover {
-						background-color: transparent;
-						deja-grid-row {
-							background-color: mat-color($primary);
-						}
-					}
 				}
 			}
 		}
